--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "open-react-template",
+  "name": "well-balance",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +14,7 @@
     "react-ga": "^2.7.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "react-touch-carousel": "^0.10.2",
     "sass": "^1.49.7",
     "typescript": "^4.9.4"
   },
