--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
+    "react-id-swiper": "4.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-touch-carousel": "^0.10.2",
     "sass": "^1.49.7",
+    "swiper": "^8.4.6",
     "typescript": "^4.9.4"
   },
   "repository": {
