--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage":"https://github.com/eocampo21/wellBalan",
   "name": "well-balance",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.16",
