--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://github.com/eocampo21/wellBalan",
+  "homepage":"https://github.com/eocampo21",
   "name": "well-balance",
   "version": "0.1.0",
   "private": false,
