chore: package updated

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/",
+  "homepage": "https://github.com/build",
   "name": "well-balance",
   "version": "0.1.0",
   "private": false,
